--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
     <div class="container">
         <div id="google_translate_element"></div><br>
 
-        <textarea id="input_text"></textarea>
-        
-        <div id="translated_content"></div>
-        <button id="copy_button"><i class="fa-regular fa-copy"></i>  Copiar</button>
+        <textarea id="input_text" placeholder="Ingresa el texto a traducir..."></textarea>
 
+        <div id="translated_content"></div>
+        <button id="copy_button"><img src="clipboard.png" alt=""> Copiar</button>
     </div>
 
-    <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript"
         src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </body>
 
