--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Auto Traductor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3559340930131570"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
